# energia-ai-python

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .env.template  .env_old  .gitignore  .pre-commit-config.yaml  COMPLETE_SETUP_GUIDE.md  DEVELOPMENT_NOTES.md  Dockerfile  FRONTEND_ANALYSIS.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_STATUS_REPORT.md  INTEGRATION_ANALYSIS_REPORT.md  JACLANG_PYTHON311_FIX_README.md  PROJECT_COMPLETION_SUMMARY.md  PROXY_CONFIGURATION.md  README.md  alembic.ini  check_system.py  config.py  create_legal_tables.sql  create_vector_store.sql  docker-compose.prod.yml  docker-compose.yml  energia-ai-python.code-workspace  env.template  eslint.config.mjs  first-100-errors.txt  integration_test.py  jac_wrapper.py  jaclang_compat.py  jest.config.js  jest.config.ts  legal_ai_usage_guide.py  lint-errors.txt  main.py  package-lock.json  package.json  patch_jaclang.py  (+14 more)
.cursor/: automation-config.json  config-manager.py  environment.json  mcp.json  startup.py
.cursor/configs/: ai-development.cursor  backend.cursor  crawler-development.cursor
.cursor/rules/: developmentprinciples.mdc  implementationbacklog.mdc  pythonbacklog.mdc
.github/workflows/: ci-cd-comprehensive.yml  ci.yml  main.yml  pr-checks.yml  python-ci.yml  security-scan.yml
.taskmaster/: automation_state.json  config.json  monitor_state.json  working_monitor_state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
app/core/: config.py
app/crawlers/: base_crawler.py  jogtar_crawler.py  magyar_kozlony_crawler.py  njt_crawler.py
app/monitoring/: magyar_kozlony_monitor.py
app/nlp/: document_chunker.py
database/init/: 01_init.sql
docs/: AI_SETUP_README.md  AUTOMATION_SYSTEM_FIX.md  CI_CD_PIPELINE.md  CODE_DOCUMENTATION_INDEX.md  ESLINT_ERROR_ANALYSIS.md  Magyar jogi AI rendszer architektúrája  v3.docx  PROXY_CONFIGURATION.md  Python_Architektura_Specifikacio_Backlog.md  REFACTORING_SUMMARY.md  TASK_AUTOMATION_GUIDE.md  TYPESCRIPT_CONFIG.md  XML Magyar jogi AI rendszer architektúrája  v3.txt  XML Magyar jogi AI rendszer architektúrája  v3.xml  ai_agents_future_strategy.md  claude_api_jogi_ai.md  cross-domain-impact-analyzer-real-implementation.md  dspy_implementation_roadmap.md  mtp_executive_summary.md  mtp_integration_strategy.md  mtp_vs_dspy_analysis.md  supabase_schema.sql  updated_frontend_analysis.md  ~$gyar jogi AI rendszer architektúrája  v3.mht
docs/architecture/: AGENT_ARCHITECTURE.md  DATA_FLOW.md  DOMAIN_MODEL.md  GUARDRAILS.md  HUMAN_FEEDBACK_SYSTEM.md  MEMORY_LAYER.md  PROACTIVE_SYSTEM.md  README.md  SECURITY_MODEL.md  SYSTEM_OVERVIEW.md
docs/testing/: TESTING_STRATEGY.md
energiajogi-ai-gondolat/: SETUP.md  config.py
enhancements/: claude_enhancements.py  dspy_agent_tutorial.py  dspy_classification_finetuning_tutorial.py  dspy_finetuning_agent_tutorial.py  dspy_mcp_agent.py  mcp_server.py
implementations/: task_12_implementation.md  task_13_implementation.md  task_14_implementation.md  task_28_implementation.md  task_9_njt_crawler_validation.md
scripts/: deploy.py  etl.py  initialize_db.py  mtp_setup.py  processLegalDocuments.ts  repairMigrations.js  repairMigrations.ts  run-ci-checks.py  setup-automation.py  test-qa.js
scripts/automation/: detect-task-context.py  fix-task-validation.py  simple-task-monitor.py  start-task-automation.py  task-implementer.py  task-status-monitor.py  working-monitor.py
src/: App.tsx  main.tsx
src/components/: ErrorBoundary.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  LovableFrontend.tsx  ProtectedRoute.tsx
src/config/: ai-config.ts
src/contexts/: MoEProvider.tsx
src/core-legal-platform/: DocumentUpdater.ts  index.ts  types.ts
src/energia_ai/: __init__.py  main.py
src/examples/: documentProcessing.ts
src/hooks/: useAgentStatus.ts  useAnalyticsTracking.tsx  useAuth.tsx  useContractAnalysis.tsx  useOptimizedSearch.tsx  useUserBehaviorTracking.tsx
src/lib/: AuthContext.tsx  DocumentUtils.ts  claude.ts  documentService.ts  legal-citation-parser.ts  lovable.ts  promptTemplates.ts  rateLimiter.ts  supabase.ts  utils.ts  validation.ts
src/llm/: ai-factory.ts  ai-service.ts  base-llm.ts  openai-llm.ts
src/middleware/: auth.ts
src/models/: legal-document.ts
src/pages/: AISetupPage.tsx  AuthPage.tsx  ContractAnalysis.tsx  Dashboard.tsx  Index.tsx  Login.tsx  NotFound.tsx  ResetPassword.tsx  ResetPasswordRequest.tsx  Testing.tsx
src/routes/: auth.ts  legal.ts
src/scripts/: createTestData.ts  run-crawler.ts  setup-ai.ts  start-crawler.ts  testSupabaseConnection.ts  validate-implementation.ts
src/services/: aiAgentRouter.ts
tests/: globalSetup.ts  globalTeardown.ts  setup.ts  test_integration.py  test_main.py  test_njt_crawler.py  test_performance.py
(+277 files in other folders)
